--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: emotiondetection-chatbot
+    name: emotion-chatbot
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    buildCommand: ""
+    startCommand: gunicorn app:app
     plan: free
     envVars:
-      - key: HF_HOME
-        value: /tmp/huggingface
+      - key: FLASK_SECRET_KEY
+        value: "your-secret-key"
